Fix: portfolio item size on small screen sizes

--- a/main.css
+++ b/main.css
@@ -306,7 +306,7 @@ header {
 
 .portfolio {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   gap: 10px;
   margin-bottom: 2em;
   max-width: 1000px;
